tests/src/frontend/expand/invalid/recursive_extends2.sk
base class X extends Y
base class Y extends X
